Sonar cleanup (#269)
Fixes issues flagged by Sonar in ClientPollerTest,
PollerHealthCheckConfigTest, ClientPollerHealthChecksTest,
ClientPollerTimeBasedHealthCheckTest, and
DefaultClientPollerStatisticsTest:

Sonar issues fixed:

* Local variables should not shadow class fields (java:S1117)
* Parentheses should be removed from a single lambda
  parameter when its type is inferred java:S1611
* "Stream.toList()" method should be used instead of
  "collectors" when unmodifiable list needed java:S6204